mention restore unlock

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -10,7 +10,7 @@ owner: Release Engineering
 **Release Date**: September 26, 2017
 
 #### Features
-
+* BBR v1.1 adds 'restore-cleanup' which can be run after a failed restore to remove artifacts from, and unlock the deployments being restored.
 * BBR v1.1 adds support for BOSH Deployments and Directors locking deployments during the restore process and declaring the order that locking is done.
 
 #### Bug Fixes
