--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,12 +5,12 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
-### <a id='1.1'></a> 1.1
+### <a id='1.1'></a> v1.1
 
 **Release Date**: September 26, 2017
 
 #### Features
-* Adds 'restore-cleanup', which can be run after a failed restore to remove artifacts from, and unlock, the deployments being restored.
+* Adds "restore-cleanup", which can be run after a failed restore to remove artifacts from, and unlock, the deployments being restored.
 * Adds support for BOSH Deployments and Directors to lock deployments during the restore process, and to declare the order that locking is done.
 
 #### Bug Fixes
@@ -22,7 +22,7 @@ None
 None
 
 
-### <a id='1.0'></a> 1.0 
+### <a id='1.0'></a> v1.0 
 
 **Release Date**: August 7, 2017
 
