--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -10,8 +10,9 @@ owner: Release Engineering
 **Release Date**: September 26, 2017
 
 #### Features
-* Adds "restore-cleanup", which can be run after a failed restore to remove artifacts from, and unlock, the deployments being restored.
-* Adds support for BOSH Deployments and Directors to lock deployments during the restore process, and to declare the order that locking is done.
+* Adds `restore-cleanup`, which can be run after a failed restore to remove artifacts from, and unlock, the deployments being restored.
+* Adds support for BOSH Deployments and Directors to lock deployments during the restore process, 
+and to declare the order that locking is done.
 
 #### Bug Fixes
 
