--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,7 +11,7 @@ owner: Release Engineering
 
 #### Features
 * Adds `restore-cleanup`, which can be run after a failed restore to remove artifacts from, and unlock, the deployments being restored.
-* Adds support for BOSH Deployments and Directors to lock deployments during the restore process, 
+* Adds support for BOSH Deployments and Directors to lock deployments during the restore process 
 and to declare the order that locking is done.
 
 #### Bug Fixes
