change 'information on' to 'information about'

--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -178,7 +178,7 @@ templates:
 </li>
 
 </pre>
-See <a href="#metadata">Metadata Script</a> for information on the properties you can use in this script.
+See <a href="#metadata">Metadata Script</a> for information about the properties you can use in this script.
 
 </ol>
 
@@ -285,7 +285,7 @@ To add a `pre-restore-lock` script to a job, do the following:
       ...
       metadata.sh.erb: bin/bbr/metadata
     ```
-    See <a href="#metadata">Metadata Script</a> for information on the properties you can use in this script.
+    See <a href="#metadata">Metadata Script</a> for information about the properties you can use in this script.
 
 ### <a id='restore'></a>Restore
 
