--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,53 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.1'></a> v1.1.4
+
+**Release Date**: Dec 13, 2017
+
+#### Features
+* Improve stdout output
+* Ensure that bbr works with scripts added via BOSH Addon
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+### <a id='1.1'></a> v1.1.3
+
+**Release Date**: October 13, 2017
+
+#### Features
+* Improve stdout output
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+### <a id='1.1'></a> v1.1.2
+
+**Release Date**: October 12, 2017
+
+#### Features
+* Improve stdout output
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
+
 ### <a id='1.1'></a> v1.1
 
 **Release Date**: September 26, 2017
