use standard format for dates[#154050267]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -7,11 +7,11 @@ owner: Release Engineering
 
 ### <a id='1.1'></a> v1.1.4
 
-**Release Date**: Dec 13, 2017
+**Release Date**: December 13, 2017
 
 #### Features
 * Improve stdout output
-* Ensure that bbr works with scripts added via BOSH Addon
+* Ensure that BOSH Backup and Restore (BBR) works with scripts added via BOSH Addon
 
 #### Bug Fixes
 
